--- a/dash_table/package.json
+++ b/dash_table/package.json
@@ -1,12 +1,13 @@
 {
   "name": "dash-table",
-  "version": "3.1.4-rc5",
+  "version": "3.1.4-rc6",
   "description": "Dash table",
-  "main": "dist/bundle.js",
+  "main": "lib/bundle.js",
   "scripts": {
     "preprivate::opentests": "run-s private::wait*",
     "preprivate::runtests": "run-s private::wait*",
     "private::build": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack --display-reasons --bail",
+    "postprivate::build": "cp -R lib/* dash_table",
     "private::host_dash8081": "python tests/cypress/dash/v_be_page.py",
     "private::host_dash8082": "python tests/cypress/dash/v_copy_paste.py",
     "private::host_js": "http-server ./dash_table -c-1 --silent",
@@ -19,7 +20,6 @@
     "private::runtests": "cypress run --browser chrome",
     "build.watch": "webpack-dev-server --content-base dash_table --mode development",
     "build:js": "run-s \"private::build -- --mode production\"",
-    "postbuild:js": "cp -R dist dash_table",
     "build:js-dev": "run-s \"private::build -- --mode development\"",
     "build:js-test": "run-s \"private::build -- --config webpack.test.config.js\"",
     "build:js-test-watch": "run-s \"private::build -- --config webpack.test.config.js --watch\"",
@@ -79,7 +79,7 @@
     "webpack-preprocessor": "^0.1.12"
   },
   "files": [
-    "/dist/bundle.js"
+    "/lib/bundle.js"
   ],
   "peerDependencies": {
     "react": ">=0.14",
