--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dash-table",
-  "version": "3.1.8-rc1",
+  "version": "3.1.8",
   "description": "Dash table",
   "main": "dash_table/bundle.js",
   "scripts": {
