--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,28 +1,13 @@
 {
+    "extends": "./tsconfig.base.json",
     "compilerOptions": {
         "outDir": "./dist",
-        "allowJs": true,
-        "allowSyntheticDefaultImports": true,
         "baseUrl": ".",
-        "emitDecoratorMetadata": false,
-        "experimentalDecorators": true,
-        "jsx": "react",
-        "module": "esnext",
-        "moduleResolution": "node",
-        "noImplicitAny": true,
-        "noUnusedLocals": true,
-        "noUnusedParameters": true,
         "paths": {
             "core/*": ["src/core/*"],
             "dash-table/*": ["src/dash-table/*"],
             "tests": ["src/tests"]
-        },
-        "sourceMap": false,
-        "strict": true,
-        "strictNullChecks": false,
-        "strictPropertyInitialization": false,
-        "target": "esnext",
-        "traceResolution": false
+        }
     },
     "exclude": [
         "tests/*"
