--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,7 @@
 include dash_table/bundle.js
 include dash_table/bundle.js.map
+include dash_table/vendors~markdown.js
+include dash_table/vendors~markdown.js.map
 include dash_table/metadata.json
 include dash_table/package-info.json
 include README.md
