--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@storybook/react": "^4.1.11",
     "@types/ramda": "^0.25.47",
     "@types/react": "^16.7.21",
+    "@types/react-dom": "^16.0.11",
     "@types/react-select": "^1.3.4",
     "babel-loader": "^8.0.5",
     "core-js": "^2.6.3",
