--- a/requirements-v0.txt
+++ b/requirements-v0.txt
@@ -1,4 +1,4 @@
+git+git://github.com/plotly/dash@master#egg=dash
 git+git://github.com/plotly/dash-core-components@master#egg=dash_core_components
 git+git://github.com/plotly/dash-html-components@master#egg=dash_html_components
-dash==0.36.0
-dash-renderer==0.17.0
+git+git://github.com/plotly/dash-renderer@master#egg=dash_renderer
