--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "@percy-io/percy-storybook": "^2.1.0",
     "@storybook/cli": "^4.1.11",
     "@storybook/react": "^4.1.11",
+    "@types/d3-format": "^1.3.1",
     "@types/ramda": "^0.25.50",
     "@types/react": "^16.8.3",
     "@types/react-dom": "^16.8.1",
@@ -59,6 +60,7 @@
     "core-js": "^2.6.5",
     "css-loader": "^2.1.0",
     "cypress": "^3.1.5",
+    "d3-format": "^1.3.2",
     "fast-isnumeric": "^1.1.2",
     "file-loader": "^3.0.1",
     "http-server": "^0.11.1",
