--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "private::host_dash8083": "python tests/cypress/dash/v_fe_page.py",
     "private::host_js": "http-server ./dash_table -c-1 --silent",
     "private::lint:ts": "tslint '{src,demo,tests}/**/*.{js,ts,tsx}' --exclude '**/@Types/*.*'",
-    "private::lint:py": "flake8 --exclude=DataTable.py,__init__.py,_imports_.py --ignore=E501,F401,F841,F811 dash_table",
+    "private::lint:py": "node scripts/lint.js",
     "private::wait_dash8081": "wait-on http://localhost:8081",
     "private::wait_dash8082": "wait-on http://localhost:8082",
     "private::wait_dash8083": "wait-on http://localhost:8083",
@@ -63,6 +63,7 @@
     "css-loader": "^2.1.0",
     "cypress": "^3.1.5",
     "d3-format": "^1.3.2",
+    "exec-sh": "^0.3.2",
     "fast-isnumeric": "^1.1.2",
     "file-loader": "^3.0.1",
     "http-server": "^0.11.1",
