--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -161,9 +161,8 @@ jobs:
             - run:
                 name: Install requirements
                 command: |
-                    sudo pip install virtualenv --upgrade
                     . venv/bin/activate
-                    pip install flake8 --quiet
+                    pip install -r requirements-base.txt --quiet
 
             - run:
                 name: Run eslint
