--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -166,7 +166,9 @@ jobs:
 
             - run:
                 name: Run eslint
-                command: flake8 --exclude=DataTable.py,__init__.py,_imports_.py --ignore=E501,F401,F841,F811 dash_table
+                command: |
+                    . venv/bin/activate
+                    npm run lint
                 when: always
 
 
