--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "dash-table",
-  "version": "3.6.0rc4",
+  "version": "3.5.0",
   "description": "Dash table",
   "main": "dash_table/bundle.js",
   "scripts": {
