--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,16 +25,25 @@ jobs:
                     - /home/circleci/.cache/Cypress
 
             - run:
-                name: Create virtualenv
-                command: |
-                    python3 -m venv venv
-
-            - run:
                 name: Install requirements
                 command: |
+                    sudo pip install --upgrade virtualenv
+                    python -m venv venv || virtualenv venv
                     . venv/bin/activate
                     pip install -r requirements-base.txt --quiet
-                    pip install -r requirements-v0.txt --quiet
+
+            - run:
+                name: Install dependencies (dash)
+                command: |
+                    git clone git@github.com:plotly/dash.git
+                    git clone git@github.com:plotly/dash-renderer.git
+                    git clone git@github.com:plotly/dash-core-components.git
+                    git clone git@github.com:plotly/dash-html-components.git
+                    . venv/bin/activate
+                    pip install -e ./dash --quiet
+                    cd dash-renderer && npm install --ignore-scripts && npm run build && pip install -e . && cd ..
+                    cd dash-core-components && npm install --ignore-scripts && npm run build && pip install -e . && cd ..
+                    cd dash-html-components && npm install --ignore-scripts && npm run build && pip install -e . && cd ..
 
             - run:
                 name: Run build:js
@@ -83,17 +92,25 @@ jobs:
                     - /home/circleci/.cache/Cypress
 
             - run:
-                name: Create virtualenv
-                command: |
-                    python3 -m venv venv
-
-            - run:
                 name: Install requirements
                 command: |
+                    sudo pip install --upgrade virtualenv
+                    python -m venv venv || virtualenv venv
                     . venv/bin/activate
-                    pip install -e .
                     pip install -r requirements-base.txt --quiet
-                    pip install -r requirements-v1.txt --quiet
+
+            - run:
+                name: Install dependencies (dash)
+                command: |
+                    git clone -b release-v1 git@github.com:plotly/dash.git
+                    git clone -b release-v1 git@github.com:plotly/dash-renderer.git
+                    git clone -b release-v1 git@github.com:plotly/dash-core-components.git
+                    git clone -b release-v1 git@github.com:plotly/dash-html-components.git
+                    . venv/bin/activate
+                    pip install -e ./dash --quiet
+                    cd dash-renderer && npm install --ignore-scripts && npm run build && pip install -e . && cd ..
+                    cd dash-core-components && npm install --ignore-scripts && npm run build && pip install -e . && cd ..
+                    cd dash-html-components && npm install --ignore-scripts && npm run build && pip install -e . && cd ..
 
             - run:
                 name: Run build:js
