--- a/requirements-v0.txt
+++ b/requirements-v0.txt
@@ -1,4 +1,4 @@
-dash_html_components-0.14.0rc1.tar.gz
-dash_core_components-0.44.0rc1.tar.gz
-dash_renderer-0.20.0rc1.tar.gz
-dash-0.39.0rc1.tar.gz
+git+git://github.com/plotly/dash@master#egg=dash
+git+git://github.com/plotly/dash-core-components@master#egg=dash_core_components
+git+git://github.com/plotly/dash-html-components@master#egg=dash_html_components
+git+git://github.com/plotly/dash-renderer@master#egg=dash_renderer
