--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@storybook/cli": "^5.0.5",
     "@storybook/react": "^5.0.5",
     "@types/d3-format": "^1.3.1",
+    "@types/papaparse": "^4.5.9",
     "@types/ramda": "^0.26.5",
     "@types/react": "^16.8.8",
     "@types/react-dom": "^16.8.3",
@@ -69,7 +70,9 @@
     "less-loader": "^4.1.0",
     "npm": "^6.9.0",
     "npm-run-all": "^4.1.5",
+    "papaparse": "^4.6.3",
     "ramda": "^0.26.1",
+    "raw-loader": "^2.0.0",
     "react": "16.8.5",
     "react-docgen": "^4.1.0",
     "react-dom": "16.8.5",
