--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "dash_table/bundle.js",
   "scripts": {
     "preprivate::opentests": "run-s private::wait*",
-    "preprivate::runtests": "run-s private::wait*",
+    "preprivate::test.server": "run-s private::wait_dash*",
+    "preprivate::test.standalone": "run-s private::wait_js*",
     "private::build": "node --max_old_space_size=4096 node_modules/webpack/bin/webpack --display-reasons --bail",
     "private::build:js": "run-s \"private::build -- --mode production\"",
     "private::build:js-dev": "run-s \"private::build -- --mode development\"",
@@ -26,15 +27,16 @@
     "private::wait_dash8083": "wait-on http://localhost:8083",
     "private::wait_js": "wait-on http://localhost:8080",
     "private::opentests": "cypress open",
-    "private::runtests:python": "python -m unittest tests/unit/format_test.py",
-    "private::runtests:unit": "cypress run --browser chrome --spec 'tests/cypress/tests/unit/**/*'",
-    "private::runtests:standalone": "cypress run --browser chrome --spec 'tests/cypress/tests/standalone/**/*'",
-    "private::runtests:server": "cypress run --browser chrome --spec 'tests/cypress/tests/server/**/*'",
-    "private::runtests": "run-s private::runtests:python private::runtests:unit private::runtests:standalone private::runtests:server",
+    "private::test.python": "python -m unittest tests/unit/format_test.py",
+    "private::test.unit": "cypress run --browser chrome --spec 'tests/cypress/tests/unit/**/*'",
+    "private::test.server": "cypress run --browser chrome --spec 'tests/cypress/tests/server/**/*'",
+    "private::test.standalone": "cypress run --browser chrome --spec 'tests/cypress/tests/standalone/**/*'",
     "build.watch": "webpack-dev-server --content-base dash_table --mode development",
     "build": "run-s private::build:js private::build:py",
     "lint": "run-s private::lint:*",
-    "test": "run-p --race private::host* private::runtests",
+    "test.server": "run-p --race private::host* private::test.server",
+    "test.standalone": "run-p --race private::host_js private::test.standalone",
+    "test.unit": "run-s private::test.python private::test.unit",
     "test.visual": "build-storybook && percy-storybook",
     "test.visual-local": "build-storybook",
     "test.watch": "run-p --race \"private::build:js-test-watch\" --race private::host* private::opentests"
