--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,10 +5,10 @@ Authors @R: as.person(c(Chris P <chris@plot.ly>))
 Description: Dash table
 Depends: R (>= 3.0.2)
 Imports: dashR
-Suggests: testthat, roxygen2
+Suggests: 
 License: MIT + file LICENSE
-URL: 
-BugReports: 
+URL: https://github.com/plotly/dash-table
+BugReports: https://github.com/plotly/dash-table/issues
 Encoding: UTF-8
 LazyData: true
 Author: Chris P [aut]
