--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,8 @@ jobs:
                     python -m venv venv || virtualenv venv
                     . venv/bin/activate
                     pip install -r requirements.txt --quiet
+                    git clone git@github.com:plotly/dash.git
+                    pip install -e ./dash --quiet
 
             - run:
                 name: Build
@@ -168,7 +170,7 @@ jobs:
                 name: Install requirements
                 command: |
                     . venv/bin/activate
-                    pip install -r requirements-base.txt --quiet
+                    pip install -r requirements.txt --quiet
 
             - run:
                 name: Run eslint
@@ -200,7 +202,9 @@ jobs:
                     sudo pip install --upgrade virtualenv
                     python -m venv venv || virtualenv venv
                     . venv/bin/activate
-                    pip install -r requirements-base.txt --quiet
+                    pip install -r requirements.txt --quiet
+                    git clone git@github.com:plotly/dash.git
+                    pip install -e ./dash --quiet
                     npm install
 
             - run:
