--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,8 +31,8 @@ jobs:
                     python -m venv venv || virtualenv venv
                     . venv/bin/activate
                     pip install -r requirements.txt --quiet
-                    git clone git@github.com:plotly/dash.git
-                    pip install -e ./dash --quiet
+                    git clone git@github.com:plotly/dash.git dash-main
+                    pip install -e ./dash-main --quiet
 
             - run:
                 name: Build
@@ -107,8 +107,8 @@ jobs:
                     python -m venv venv || virtualenv venv
                     . venv/bin/activate
                     pip install -r requirements.txt --quiet
-                    git clone git@github.com:plotly/dash.git
-                    pip install -e ./dash --quiet
+                    git clone git@github.com:plotly/dash.git dash-main
+                    pip install -e ./dash-main --quiet
 
             - run:
                 name: Run tests
@@ -211,8 +211,8 @@ jobs:
                 name: Install dependencies (dash)
                 command: |
                     . venv/bin/activate
-                    git clone git@github.com:plotly/dash.git
-                    pip install -e ./dash --quiet
+                    git clone git@github.com:plotly/dash.git dash-main
+                    pip install -e ./dash-main --quiet
 
             - run:
                 name: Install test requirements
