--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,7 @@ jobs:
                     python -m venv venv || virtualenv venv
                     . venv/bin/activate
                     pip install -r requirements.txt --quiet
-                    git clone git@github.com:plotly/dash.git dash-main
+                    git clone --depth 1 git@github.com:plotly/dash.git dash-main
                     pip install -e ./dash-main --quiet
 
             - run:
@@ -107,7 +107,7 @@ jobs:
                     python -m venv venv || virtualenv venv
                     . venv/bin/activate
                     pip install -r requirements.txt --quiet
-                    git clone git@github.com:plotly/dash.git dash-main
+                    git clone --depth 1 git@github.com:plotly/dash.git dash-main
                     pip install -e ./dash-main --quiet
 
             - run:
@@ -211,7 +211,7 @@ jobs:
                 name: Install dependencies (dash)
                 command: |
                     . venv/bin/activate
-                    git clone git@github.com:plotly/dash.git dash-main
+                    git clone --depth 1 git@github.com:plotly/dash.git dash-main
                     pip install -e ./dash-main --quiet
 
             - run:
