--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,4 +11,4 @@ BugReports: https://github.com/plotly/dash-table/issues
 Encoding: UTF-8
 LazyData: true
 Author: Chris Parmer [aut]
-Maintainer: Chris Parmer <chris@plot.ly>
+Maintainer: Ryan Patrick Kyle <ryan@plot.ly>
