--- a/package.json
+++ b/package.json
@@ -95,7 +95,8 @@
     "webpack": "^4.34.0",
     "webpack-cli": "^3.3.4",
     "webpack-dev-server": "^3.7.1",
-    "webpack-preprocessor": "^0.1.12"
+    "webpack-preprocessor": "^0.1.12",
+    "xlsx": "^0.14.3"
   },
   "files": [
     "/dash_table/bundle*{.js,.map}"
