--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -223,10 +223,17 @@ jobs:
                     pip install -e .
 
             - run:
-                name: Run integration tests
+                name: ⚙️ run integration test
                 command: |
                   . venv/bin/activate
-                  pytest --headless --log-cli-level DEBUG tests/integration
+                  pytest --headless --junitxml=test-reports/dash.xml --log-cli-level DEBUG tests/integration
+            - store_artifacts:
+                path: test-reports
+            - store_test_results:
+                path: test-reports
+            - store_artifacts:
+                path: /tmp/dash_artifacts
+
 
 
 workflows:
