--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -213,7 +213,8 @@ jobs:
                     . venv/bin/activate
                     git clone --depth 1 git@github.com:plotly/dash.git dash-main
                     pip install -e ./dash-main[testing] --quiet
-                    cd dash-main/dash-renderer && npm install --ignore-scripts && npm run build && pip install -e . && cd ../..
+                    cd dash-main && pip install -r requires-ci.txt
+                    cd dash-renderer && npm run build && pip install -e . && cd ../..
 
             - run:
                 name: Install test requirements
