--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,7 +32,7 @@ jobs:
                     . venv/bin/activate
                     pip install -r dev-requirements.txt --quiet
                     git clone --depth 1 git@github.com:plotly/dash.git dash-main
-                    pip install -e ./dash-main --quiet
+                    pip install -e ./dash-main[testing] --quiet
 
             - run:
                 name: Build
@@ -108,7 +108,7 @@ jobs:
                     . venv/bin/activate
                     pip install -r dev-requirements.txt --quiet
                     git clone --depth 1 git@github.com:plotly/dash.git dash-main
-                    pip install -e ./dash-main --quiet
+                    pip install -e ./dash-main[testing] --quiet
 
             - run:
                 name: Run tests
