--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -32,8 +32,8 @@ jobs:
                     . venv/bin/activate
                     pip install -r dev-requirements.txt --quiet
                     git clone --depth 1 git@github.com:plotly/dash.git dash-main
-                    pip install -e ./dash-main[testing] --quiet
-                    pip list
+                    pip install -e ./dash-main --quiet
+                    cd dash-main && pip install -r requires-ci.txt
 
             - run:
                 name: Build
@@ -109,7 +109,8 @@ jobs:
                     . venv/bin/activate
                     pip install -r dev-requirements.txt --quiet
                     git clone --depth 1 git@github.com:plotly/dash.git dash-main
-                    pip install -e ./dash-main[testing] --quiet
+                    pip install -e ./dash-main --quiet
+                    cd dash-main && pip install -r requires-ci.txt
 
             - run:
                 name: Run tests
@@ -213,7 +214,7 @@ jobs:
                 command: |
                     . venv/bin/activate
                     git clone --depth 1 git@github.com:plotly/dash.git dash-main
-                    pip install -e ./dash-main[testing] --quiet
+                    pip install -e ./dash-main --quiet
                     cd dash-main && pip install -r requires-ci.txt
                     cd dash-renderer && npm run build && pip install -e . && cd ../..
 
