--- a/dash-info.yaml
+++ b/dash-info.yaml
@@ -9,8 +9,8 @@ pkg_help_description: >-
 pkg_help_title: >-
     Core Interactive Table Component for Dash
 r_examples:
-    - name: dashDataTable 
-      dontrun: TRUE 
+    - name: dashDataTable
+      dontrun: FALSE
       code: |
             # For comprehensive documentation of this package's features,
             # please consult https://dashr.plot.ly/datatable
@@ -18,61 +18,72 @@ r_examples:
             # A package vignette is currently in development and will
             # provide many of the same examples currently available online
             # in an offline-friendly format.
-            library(dash)
-            library(dashTable)
 
-            app <- Dash$new()
+            # The following if statement is not required to run this
+            # example locally, but was added at the request of CRAN
+            # maintainers.
+            if (require("dash")) {
+              library(dash)
+              library(dashTable)
 
-            # We can easily restrict the number of rows to display at
-            # once by using style_table:
-            app$layout(
-              dashDataTable(
-                id = "table",
-                columns = lapply(colnames(iris), 
-                                 function(colName){
-                                   list(
-                                     id = colName,
-                                     name = colName
-                                   )
-                                 }),
-                style_table = list(
-                  maxHeight = "250px",
-                  overflowY = "scroll"
-                ),
-                data = df_to_list(iris)
+              app <- Dash$new()
+
+              # We can easily restrict the number of rows to display at
+              # once by using style_table:
+              app$layout(
+                dashDataTable(
+                  id = "table",
+                  columns = lapply(colnames(iris),
+                                   function(colName){
+                                     list(
+                                       id = colName,
+                                       name = colName
+                                     )
+                                   }),
+                  style_table = list(
+                    maxHeight = "250px",
+                    overflowY = "scroll"
+                  ),
+                  data = df_to_list(iris)
+                )
               )
-            )
 
-            app$run_server()
+              # block=FALSE also required to pass CRAN checks
+              app$run_server(block=FALSE)
+              
+              app$server$stop()
 
-            app <- Dash$new()
+              app <- Dash$new()
 
-            # We can also make rows and columns selectable/deletable
-            # by setting a few additional attributes:
-            app$layout(
-              dashDataTable(
-                id = "table",
-                columns = lapply(colnames(iris), 
-                                 function(colName){
-                                   list(
-                                     id = colName,
-                                     name = colName,
-                                     deletable = TRUE
-                                   )
-                                 }),
-                style_table = list(
-                  maxHeight = "250px",
-                  overflowY = "scroll"
-                ),
-                data = df_to_list(iris),
-                editable = TRUE,
-                filter_action = "native",
-                sort_action = "native",
-                sort_mode = "multi",
-                column_selectable = "single",
-                row_selectable = "multi",
-                row_deletable = TRUE
+              # We can also make rows and columns selectable/deletable
+              # by setting a few additional attributes:
+              app$layout(
+                dashDataTable(
+                  id = "table",
+                  columns = lapply(colnames(iris),
+                                   function(colName){
+                                     list(
+                                       id = colName,
+                                       name = colName,
+                                       deletable = TRUE
+                                     )
+                                   }),
+                  style_table = list(
+                    maxHeight = "250px",
+                    overflowY = "scroll"
+                  ),
+                  data = df_to_list(iris),
+                  editable = TRUE,
+                  filter_action = "native",
+                  sort_action = "native",
+                  sort_mode = "multi",
+                  column_selectable = "single",
+                  row_selectable = "multi",
+                  row_deletable = TRUE
+                )
               )
-            )
 
-            app$run_server()
+              # block=FALSE also required to pass CRAN checks
+              app$run_server(block=FALSE)
+              app$server$stop()
+           } 
